# estudio_licitacion_v2

./: pyproject.toml  run.py  seed_organismos.py
migrations/: env.py
migrations/versions/: 91fcd8e8bc87_tabla_licitaciones_corregida_a_string.py  a89730e624a7_migracion_inicial_limpia.py
src/UI/: ventana_principal.py
src/UI/controllers/: organismos_controller.py  puntajes_controller.py
src/UI/widgets/: tab_candidatas.py  tab_detalle_licitacion.py  tab_herramientas.py  tab_listado_base.py  tab_ofertadas.py  tab_seguimiento.py
src/UI/widgets/subTabs_Herramientas/: tab_extraer.py  tab_palabras.py  tab_piloto_automatico.py  tab_puntajes.py
src/UI/widgets/sub_tabs_herramientas/: tab_exportar.py  tab_extraer.py  tab_organismos.py  tab_piloto_automatico.py  tab_puntajes.py
src/UI/workers/: export_worker.py  scraping_worker.py
src/bd/: database.py  models.py
src/config/: config.py  constantes.py
src/repositories/: almacenar.py  licitaciones_repository.py
src/scraper/: recolector.py
src/services/: almacenar.py  calculadora.py  exportador.py  instancias.py  orquestador.py  transformador_api.py
src/utils/: logger.py
tests/: test_calculadora.py  test_calculadora_concurrencia.py  test_recolector_api.py  test_repositorios.py  test_transformador_api.py  test_ui_principal.py
